# AlgorithmsLabTemplate

./: .gitignore  Abstractions.h  Algorithm.h  CMakeLists.txt  Examples.cpp  Generator.h  Output.h  Timer.h
Algorithms/: BubbleSort.h  IAlgorithm.h  SumAlgorithm.h
Generators/: ConstantGenerator.h  RandomRealGenerator.h
Lab4/: CMakeLists.txt  main.cpp
Outputs/: ConsoleOutput.cpp  ConsoleOutput.h  TXTFileOutput.cpp  TXTFileOutput.h
include/AlgorithmLib/: Algorithm.h  CMakeLists.txt  Generator.h  Output.h  StackLib.h  Timer.h  VectorLib.h  main.cpp
include/AlgorithmLib/Algorithms/: AddLib.h  BinarySearch.h  BubbleSort.h  DeleteLib.h  IAlgorithm.h  LinearSearch.h  ProdAlgorithm.h  QuickLibSort.h  QuickSort.h  SearchLib.h  SqrAlgorithm.h
include/AlgorithmLib/Examples/: Examples.cpp  main.cpp
include/AlgorithmLib/Generators/: EqualRealGenerator.h  IGenerator.h  RandomIntGenerator.h  RandomRealGenerator.h  ReverseGenerator.h  SearchGenerator.h  WorstCaseGenerator.h
include/AlgorithmLib/Outputs/: IOutputListener.h  TXTFileOutput.cpp  TXTFileOutput.h
include/AlgorithmLib/StackStructure/: AddAlgorithm.h  DeleteAlgorithm.h  Stack.h
include/AlgorithmLib/Vector2fLib/: Vector2f.cpp  Vector2f.h  Vector2fRandGenerator.h
lab1/src/: main.cpp
lab2/FileData/: double.txt  float.txt  int.txt
lab2/src/: CMakeLists.txt  main.cpp
lab3/FileData/: Hand.txt  Lib.txt  bubbleSort.txt  quickConstSort.txt  quickReverseSort.txt  quickSort.txt
lab3/Plots/: QuickComp.agr  WorstCaseComp.agr  lab3BubbleAndQuick.agr
lab3/src/: CMakeLists.txt  main.cpp
lab4/FileData/: Binary.txt  Lib.txt  LibSorted.txt  Linear.txt
lab4/Plots/: lab4Comp.agr
lab4/src/: CMakeLists.txt  main.cpp
lab5/FileData/: AddingHand.txt  DeletingHand.txt
lab5/Plots/: lab5AddingDeleting.agr
lab5/src/: CMakeLists.txt  main.cpp
lab6/src/: CMakeLists.txt  main.cpp
